# tiny_ipc

./: CMakeLists.txt  LICENSE  README.md  config.h.in
examples/channel/: CMakeLists.txt  main.cpp
examples/route/: CMakeLists.txt  main.cpp
examples/send_recv/: CMakeLists.txt  main.cpp
include/ipc/: Buffer.h  Callback.h  ErrorCode.h  Ipc.h  def.h  export.h
src/: Buffer.cpp  BufferDesc.hpp  CMakeLists.txt  Choose.hpp  Descriptor.cpp  Descriptor.h  Handle.cpp  Handle.h  Ipc.cpp  MessageQueue.hpp  Policies.hpp  PoolAlloc.cpp  PoolAlloc.h  ProdCons.hpp  Queue.hpp  Resource.hpp
src/circ/: Head.hpp  Segment.hpp
src/core/: Cache.hpp  Connection.cpp  Connection.h  Connection.hpp  Content.cpp  Content.h  Content.hpp  Fragment.hpp  Head.hpp  Segment.hpp
src/fragment/: Fragment.hpp
src/memory/: Alloc.hpp
src/sync/: Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  RobustExclusiveLock.hpp  RwLock.h  ScopeGuard.h  Waiter.cpp  Waiter.h
test/: CMakeLists.txt  random.hpp  stopwatch.hpp  test.h  test_ipc.cpp  test_mem.cpp  test_queue.cpp  test_shm.cpp  test_sync.cpp  test_thread_utility.cpp  test_waiter.cpp  thread_pool.h
